# src/views/openapi.blade.php
@@ -15,6 +15,27 @@
   },
   "servers": [
     {
+      "url": "{scheme}://laravel-file-finder.mhs.web.id/{basePath}",
+      "description": "Demo Server",
+      "variables": {
+        "scheme": {
+          "description": "The API is accessible via https and http",
+          "enum": [
+            "https",
+            "http"
+          ],
+          "default": "http"
+        },
+        "basePath": {
+          "description": "Base path",
+          "enum": [
+            "file-finder/api/v1.0"
+          ],
+          "default": "file-finder/api/v1.0"
+        }
+      }
+    },
+    {
       "url": "{scheme}://{host}:{port}/{basePath}",
       "description": "Production Server",
       "variables": {
